@@ -1,3 +1,7 @@
+2015-06-17  Richard Frith-Macdonald <rfm@gnu.org>
+
+	* EcAlarmSinkSNMP.m: Fix stupid mistake setting notificationID.
+
 2015-06-16  Richard Frith-Macdonald <rfm@gnu.org>
 
 	* EcAlarmSinkSNMP.m: Fix error in alarms table oid length.
